--- a/app/src/pages/Home/index.less
+++ b/app/src/pages/Home/index.less
@@ -13,4 +13,14 @@ html, body, #root{
     .page-content{
         flex: 1;
     }
+
+    .area-list{
+        padding-top: 0;
+        .am-list-body{
+            background: transparent;
+        }
+        .area-item{
+            margin-bottom: 15px;
+        }
+    }
 }
