--- a/app/src/pages/Home/SideBar/index.less
+++ b/app/src/pages/Home/SideBar/index.less
@@ -34,11 +34,14 @@
 
     .areas-list{
         width: 300px;
+        display: flex;
+        flex-wrap: wrap;
         padding: 0;
 
         .am-button{
             margin-right: 5px;
             margin-bottom: 5px;
+            flex: 1 0 auto;
         }
     }
 
