--- a/app/src/components/List/index.less
+++ b/app/src/components/List/index.less
@@ -32,6 +32,8 @@
             }
 
             .area{
+                height: 13px;
+                min-width: 40px;
                 background: #FF9800;
                 color: #fff;
                 border-radius: 2px;
