--- a/app/src/pages/Home/SideBar/index.less
+++ b/app/src/pages/Home/SideBar/index.less
@@ -33,7 +33,7 @@
     }
 
     .areas-list{
-        width: 300px;
+        width: 100%;
         display: flex;
         flex-wrap: wrap;
         padding: 0;
