--- a/app/src/components/List/index.less
+++ b/app/src/components/List/index.less
@@ -77,6 +77,12 @@
                 color: red;
             }
         }
+
+        &.isover{
+            .meta-title{
+                text-decoration: line-through;
+            }
+        }
     }
 }
 
