--- a/app/src/pages/Home/Nav/index.less
+++ b/app/src/pages/Home/Nav/index.less
@@ -3,4 +3,45 @@
         width: 36px;
         height: 34px;    
     }
+
+    .search-bar{
+        display: flex;
+        padding: 8px 16px;
+        background: #efeff4;
+
+        span{
+            height: 32px;
+            line-height: 32px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+        .input-container{
+            flex: 1;
+        }
+        .input{
+            width: 100%;
+            height: 32px;
+            border-radius: 3px;
+            background: #fff;
+            text-align: left;
+
+            .am-icon{
+                float: left;
+                height: 32px;
+                margin-left: 5px;
+            }
+            span{
+                margin-left: 12px;
+            }
+        }
+        .filter-trigger{
+            flex: 0 auto;
+            font-size: 1rem;
+            margin-left: 12px;
+
+            .iconfont{
+                font-size: 24px;
+            }
+        }
+    }
 }
