--- a/app/src/pages/Home/Nav/index.less
+++ b/app/src/pages/Home/Nav/index.less
@@ -6,6 +6,7 @@
 
     .search-bar{
         display: flex;
+        align-items: center;
         padding: 8px 16px;
         background: #efeff4;
 
@@ -20,14 +21,14 @@
         }
         .input{
             width: 100%;
-            height: 32px;
             border-radius: 3px;
+            font-size:.4rem;
             background: #fff;
             text-align: left;
 
             .am-icon{
                 float: left;
-                height: 32px;
+                height: 1rem;
                 margin-left: 5px;
             }
             span{
@@ -36,7 +37,7 @@
         }
         .filter-trigger{
             flex: 0 auto;
-            font-size: 1rem;
+            font-size: .4rem;
             margin-left: 12px;
 
             .iconfont{
