--- a/app/src/pages/Home/SideBar/index.less
+++ b/app/src/pages/Home/SideBar/index.less
@@ -1,30 +1,30 @@
 .sidebar-content{
     box-sizing: border-box;
     height: 100%;
-    padding-bottom: 64px;
+    display: flex;
+    flex-direction: column;
     
     .filters{
-        height: 100%;
+        flex: 1;
         overflow-y: auto;
         padding: 12px 24px;
     }
 
     .btn-groups{
-        position: fixed;
-        bottom: 0;
-        padding: 12px;
+        flex: 0 1rem;
+        padding: .22rem;
         text-align: center;
         display: flex;
         justify-content: center;
         width: 100%;
 
         .am-button{
-            width: 33%;
-            max-width: 136px;
+            width: 3rem;
+            font-size: .45rem;
             box-sizing: border-box;
-            height: 40px;
-            line-height: 40px;
-            border-radius: 20px;
+            height: 1rem;
+            line-height: 1rem;
+            border-radius: .5rem;
             
             &:before{
                 border-radius: 40px;
@@ -42,14 +42,23 @@
             margin-right: 5px;
             margin-bottom: 5px;
             flex: 1 0 auto;
+            font-size: .3rem;
+            height: .8rem;
+            line-height: .8rem;
         }
     }
 
     .sub-title {
         color: #888;
-        font-size: 14px;
-        line-height: 32px;
+        font-size: .4rem;
+        line-height: .8rem;
         margin: 0;
+    }
+
+    .am-list-line{
+        .am-list-content{
+            font-size: .4rem;
+        }
     }
 }
 
