--- a/app/src/components/List/index.less
+++ b/app/src/components/List/index.less
@@ -5,19 +5,22 @@
     .xui-list-item{
         background: #fff;
         text-align: left;
-        padding: 15px 15px 10px;
+        padding: 10px 15px 10px;
         margin-bottom: 15px;
 
         .item-meta{
             position: relative;
-            height: 28px;
+            height: .8rem;
+            margin-bottom: .2rem;
+            display: flex;
+            align-items: center;
 
             .icon-id{
                 width: 28px;
                 height: 28px;
                 line-height: 28px;
                 position: absolute;
-                top: -6px;
+                top: 0;
                 background: #1890ff;
                 border-radius: 50%;
                 color: #fff;
@@ -27,27 +30,29 @@
 
             .meta-title{
                 text-indent: 38px;
-                font-size: 14px;
+                font-size: .4rem;
                 font-weight: bold;
+                margin: 0;
             }
 
             .area{
-                height: 13px;
-                min-width: 40px;
+                height: .7rem;
+                line-height: .7rem;
+                min-width: 2rem;
+                text-align: center;
                 background: #FF9800;
                 color: #fff;
                 border-radius: 2px;
-                font-size: 12px;
-                padding: 5px 10px;
+                font-size: .3rem;
                 position: absolute;
                 right: 30px;
-                top: -2px;
             }
             .location{
-                height: 18px;
                 position: absolute;
                 right: 0;
-                top: 0;
+                img{
+                    height: .5rem;
+                }
             }
         }
 
@@ -56,6 +61,8 @@
 
             .meta-line{
                 display: flex;
+                font-size: .4rem;
+
                 & > div{
                     flex: 1;
                 }
@@ -70,7 +77,8 @@
                 font-size: 14px;
             }
             p.description{
-                font-size: 13px;
+                font-size: .38rem;
+                margin: .2rem 0 0;
             }
 
             .price{
