--- a/app/src/pages/Home/Nav/index.less
+++ b/app/src/pages/Home/Nav/index.less
@@ -22,7 +22,7 @@
         .input{
             width: 100%;
             border-radius: 3px;
-            font-size:.4rem;
+            font-size: 14px;
             background: #fff;
             text-align: left;
 
@@ -37,7 +37,7 @@
         }
         .filter-trigger{
             flex: 0 auto;
-            font-size: .4rem;
+            font-size: 14px;
             margin-left: 12px;
 
             .iconfont{
