--- a/app/src/pages/Home/SideBar/index.less
+++ b/app/src/pages/Home/SideBar/index.less
@@ -20,7 +20,7 @@
 
         .am-button{
             width: 3rem;
-            font-size: .45rem;
+            font-size: 16px;
             box-sizing: border-box;
             height: 1rem;
             line-height: 1rem;
@@ -42,7 +42,7 @@
             margin-right: 5px;
             margin-bottom: 5px;
             flex: 1 0 auto;
-            font-size: .3rem;
+            font-size: 12px;
             height: .8rem;
             line-height: .8rem;
         }
@@ -50,14 +50,14 @@
 
     .sub-title {
         color: #888;
-        font-size: .4rem;
+        font-size: 14px;
         line-height: .8rem;
         margin: 0;
     }
 
     .am-list-line{
         .am-list-content{
-            font-size: .4rem;
+            font-size: 14px;
         }
     }
 }
