--- a/app/src/components/List/index.less
+++ b/app/src/components/List/index.less
@@ -30,7 +30,7 @@
 
             .meta-title{
                 text-indent: 38px;
-                font-size: .4rem;
+                font-size: 14px;
                 font-weight: bold;
                 margin: 0;
             }
@@ -43,7 +43,7 @@
                 background: #FF9800;
                 color: #fff;
                 border-radius: 2px;
-                font-size: .3rem;
+                font-size: 12px;
                 position: absolute;
                 right: 30px;
             }
@@ -61,7 +61,7 @@
 
             .meta-line{
                 display: flex;
-                font-size: .4rem;
+                font-size: 14px;
 
                 & > div{
                     flex: 1;
@@ -77,7 +77,7 @@
                 font-size: 14px;
             }
             p.description{
-                font-size: .38rem;
+                font-size: 13px;
                 margin: .2rem 0 0;
             }
 
