--- a/app/src/pages/Home/Nav/index.less
+++ b/app/src/pages/Home/Nav/index.less
@@ -28,7 +28,7 @@
 
             .am-icon{
                 float: left;
-                height: 1rem;
+                height: 32px;
                 margin-left: 5px;
             }
             span{
