--- a/app/src/pages/Home/SideBar/index.less
+++ b/app/src/pages/Home/SideBar/index.less
@@ -7,24 +7,25 @@
     .filters{
         flex: 1;
         overflow-y: auto;
-        padding: 12px 24px;
+        padding: 12px;
     }
 
     .btn-groups{
-        flex: 0 1rem;
-        padding: .22rem;
+        flex: 0 40px;
+        padding: 12px;
         text-align: center;
         display: flex;
         justify-content: center;
         width: 100%;
 
         .am-button{
-            width: 3rem;
+            width: 36%;
+            max-width: 136px;
             font-size: 16px;
             box-sizing: border-box;
-            height: 1rem;
-            line-height: 1rem;
-            border-radius: .5rem;
+            height: 40px;
+            line-height: 40px;
+            border-radius: 20px;
             
             &:before{
                 border-radius: 40px;
@@ -43,15 +44,15 @@
             margin-bottom: 5px;
             flex: 1 0 auto;
             font-size: 12px;
-            height: .8rem;
-            line-height: .8rem;
+            height: 24px;
+            line-height: 24px;
         }
     }
 
     .sub-title {
         color: #888;
         font-size: 14px;
-        line-height: .8rem;
+        line-height: 32px;
         margin: 0;
     }
 
