--- a/app/src/components/List/index.less
+++ b/app/src/components/List/index.less
@@ -10,8 +10,8 @@
 
         .item-meta{
             position: relative;
-            height: .8rem;
-            margin-bottom: .2rem;
+            height: 28px;
+            margin-bottom: 12px;
             display: flex;
             align-items: center;
 
@@ -36,9 +36,9 @@
             }
 
             .area{
-                height: .7rem;
-                line-height: .7rem;
-                min-width: 2rem;
+                height: 24px;
+                line-height: 24px;
+                min-width: 60px;
                 text-align: center;
                 background: #FF9800;
                 color: #fff;
@@ -51,7 +51,7 @@
                 position: absolute;
                 right: 0;
                 img{
-                    height: .5rem;
+                    height: 18px;
                 }
             }
         }
@@ -78,7 +78,7 @@
             }
             p.description{
                 font-size: 13px;
-                margin: .2rem 0 0;
+                margin: 12px 0 0;
             }
 
             .price{
