--- a/app/src/pages/Home/index.less
+++ b/app/src/pages/Home/index.less
@@ -14,12 +14,12 @@ html, body, #root{
         flex: 1;
     }
 
-    .area-list{
+    .scenic-list{
         padding-top: 0;
         .am-list-body{
             background: transparent;
         }
-        .area-item{
+        .scenic-item{
             margin-bottom: 15px;
         }
     }
