Add initial Jenkinsfile

--- a/app/src/components/ScenicList/index.less
+++ b/app/src/components/ScenicList/index.less
@@ -39,6 +39,7 @@
             flex: 1;
             font-size: 14px;
             line-height: 1.5em;
+            min-height: 145px;
 
             .meta-line{
                 margin-bottom: 8px;
